--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Practice Assessment 1</h1>
     <br>
     <hr>
-<a href="https://www.google.com">link to a website open in same tab tab</a><br>
+<a href="https://www.google.com">Link to a website open in same tab tab</a><br>
 <br>
 <a href="https://www.google.com" target="_blank">link to a website open in new tab</a><br>
 <br>
